--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "kurrxd",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "github:adiwajshing/baileys",
+    "@adiwajshing/baileys": "^4.0.1",
     "@adiwajshing/keyed-db": "^0.2.4",
     "awesome-phonenumber": "^2.69.0",
     "axios": "^0.24.0",
